--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="margin: 0; width: 100vw; height: 100vh;">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -37,7 +37,7 @@
 
     <title>React App</title>
   </head>
-  <body style="margin: 0;">
+  <body style="margin: 0; width: 100%; height: 100%;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
