updated title of app

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
 
-    <title>React App</title>
+    <title>Simo_Sultan React Mashup App</title>
   </head>
   <body style="margin: 0; width: 100%; height: 100%;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
